# idris-php

./: LICENSE  README.md  idris-php.cabal
phprts/: .idris-val.php.swp  idris-val.php
src/: Main.hs
src/IRTS/: .CodegenPHP.hs.swp  CodegenPHP.hs
